--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost; user=campus; password=campus2023; database=DiagramaNetCore;"
   }
 }
